Version 1.0.1

+ First release


Version 1.1.0

+ Added RubyRange


Version 1.2.0

+ Added RubyDate

* Changed the generic of Successive interface from <E extends Comparable<E>> to <E>

+ Added net.sf.rubycollect4j.succ package

* Moved net.sf.rubycollect4j.range to net.sf.rubycollect4j.succ

- Removed net.sf.rubycollect4j.range package

* Made constructors of utility classes private

* Changed RubyCollections::date behavior to close human nature
  Ex: date(2013, 7, 1) will create RubyDate(2013, Jul, 1) instead of RubyDate(2013, Aug, 1)

* Fixed RubyRange::range behavior on the range of double
  range(1.09, 1.11).toA() will generate [1.09, 1.10, 1.11] instead of [1.09, 1.10]

* DoubleSuccessor constructor requires a precision now and it is not a singleton anymore


Version 1.2.1

* Bug fixed: RubyDir.glob("**/*") missed to retrieve the files of the very top level directory

+ Added weeks() to DateShifter which means date(2013, 1, 1).add(7).weeks() is able to use

+ Made rh() accept up to 20 pairs

+ Added year(), month(), day(), dayOfWeek(), dayOfYear(), week(), weekOfMonth(), hour(), minute(), second() & millisecond() to RubyDate


Version 1.3.0

* Improved RubyDir.glob() compatibility on Windows 

+ Throws RuntimeExceptions while Exceptions are caught

+ The binarySearch() of RubyArray now accepts block

+ Added compareByIdentity() feature for RubyHash

* RubyRange not requires Comparable objects to initialize anymore

* Moved newRubyArray(), newRubyHash(), newRubyEnumerable(), newRubyRnumerator(), newRubyRange() to RubyCollections

- Removed U(), X(), Ⴖ(), ㄍ(), ㄧ(), 十() from RubyArray

* Made RubyEnumerable an abstract class

* Changed constructors of RubyArray & RubyHash to public

* Changed foreach() of RubyIO to accept only a block


Version 1.3.1

* Fixed the bugs of maxBy() & minBy() of RubyEnumerable