@@ -68,3 +68,5 @@ Version 1.3.0
 Version 1.3.1
 
 * Fixed the bugs of maxBy() & minBy() of RubyEnumerable
+
+* Added date() to RubyCollections
